created for learning

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header class="cabecalho">
+    <header class="cabecalho" id="header" >
         <div class="box-img">
             <div class="img-title">
                 <img class="imagem-titulo" src="src/imagens/logo.svg" alt="Logotipo">
@@ -34,7 +34,7 @@
             <button class="btn-azul">Baixar para Mac</button>
         </div>
     </header>
-    <main>
+    <main>x
         <section class="primeira-secao">
             <h2 class="titulo">Acompanhe seus trechos</h2>
             <p class="subtitulo">A área de transferência armazena instantaneamente qualquer item copiado
@@ -80,7 +80,7 @@
             <h2 class="titulo">
                 Turbine seu fluxo de trabalho
             </h2>
-            <p>Temos as ferramentas para aumentar sua produtividade.</p>
+            <p class="subtitulo">Temos as ferramentas para aumentar sua produtividade.</p>
             <div class="imagens-secao-quatro">
                 <div class="info-sq">
                     <div class="info-um">
@@ -152,7 +152,7 @@
                 <div class="suporte">
                     <ul>
                         <div class="contato">
-                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#" id="header">FAQs</a></li>
 
                             <li><a href="#">Nos contate</a></li>
 
